# eiger

./: .gitignore  README.md  cabal.project
eiger/: CHANGELOG.md  eiger.cabal
eiger-json/: CHANGELOG.md  eiger-json.cabal
eiger-json/src/Eiger/: JSON.hs
eiger-json/src/Eiger/JSON/: Class.hs  Instance.hs  Read.hs  Util.hs  Write.hs
eiger-test/: CHANGELOG.md  eiger-test.cabal
eiger-test/test/: Paths.hs  Test.hs
eiger-test/test/BEPS/: Loaded.hs  Rules.hs  Rules2.hs
eiger-test/test/USIncomeTax/: Defs.hs  Rules.hs
eiger-test/test/USIncomeTax/Test/: HardCoded.hs  Loaded.hs
eiger-test/test/data/input/: beps.json  us_income_tax.json
eiger-test/test/data/output/: original.json.golden  updated.json.golden
eiger/src/Eiger/: DSL.hs  Database.hs  Generic.hs  Key.hs  Monad.hs  Record.hs  Util.hs
eiger/src/Eiger/DSL/: Equality.hs  Instances.hs  Number.hs
eiger/src/Eiger/Record/: Class.hs  Core.hs  Operation.hs  TH.hs  Type.hs
